--- a/manuscript/TAS-template.tex
+++ b/manuscript/TAS-template.tex
@@ -1,67 +1,65 @@
-\documentclass[12pt, letterpaper, titlepage]{article}
-
+\documentclass[12pt]{article}
 \usepackage{amsmath}
-\usepackage{booktabs}
 \usepackage{amsthm}
 \usepackage{graphicx}
-\usepackage[margin=1in]{geometry}
+\usepackage{enumerate}
+\usepackage{natbib}
+%\usepackage{url} % not crucial - just used below for the URL 
+\usepackage{booktabs}
 \usepackage{hyperref}
 \hypersetup{colorlinks = true, linkcolor = blue, citecolor=blue, urlcolor = blue}
-\usepackage{natbib}
 \usepackage{enumitem}
-\usepackage{setspace}
-
-\usepackage[]{lineno}
-\linenumbers*[1]
-% %% patches to make lineno work better with amsmath
-\newcommand*\patchAmsMathEnvironmentForLineno[1]{%
- \expandafter\let\csname old#1\expandafter\endcsname\csname #1\endcsname
- \expandafter\let\csname oldend#1\expandafter\endcsname\csname end#1\endcsname
- \renewenvironment{#1}%
- {\linenomath\csname old#1\endcsname}%
- {\csname oldend#1\endcsname\endlinenomath}}%
-\newcommand*\patchBothAmsMathEnvironmentsForLineno[1]{%
- \patchAmsMathEnvironmentForLineno{#1}%
- \patchAmsMathEnvironmentForLineno{#1*}}%
-
-\AtBeginDocument{%
- \patchBothAmsMathEnvironmentsForLineno{equation}%
- \patchBothAmsMathEnvironmentsForLineno{align}%
- \patchBothAmsMathEnvironmentsForLineno{flalign}%
- \patchBothAmsMathEnvironmentsForLineno{alignat}%
- \patchBothAmsMathEnvironmentsForLineno{gather}%
- \patchBothAmsMathEnvironmentsForLineno{multline}%
-}
-
-% control floats
-\renewcommand\floatpagefraction{.9}
-\renewcommand\topfraction{.9}
-\renewcommand\bottomfraction{.9}
-\renewcommand\textfraction{.1}
-\setcounter{totalnumber}{50}
-\setcounter{topnumber}{50}
-\setcounter{bottomnumber}{50}
-
-\newcommand{\jy}[1]{\textcolor{blue}{JY: #1}}
-\newcommand{\eds}[1]{\textcolor{red}{EDS: (#1)}}
 
 
-\title{On Misuses of the Kolmogorov--Smirnov Test for One-Sample Goodness-of-Fit}
+%\pdfminorversion=4
+% NOTE: To produce blinded version, replace "0" with "1" below.
+\newcommand{\blind}{0}
 
-\author{Anthony Zeimbekakis\\
+% DON'T change margins - should be 1 inch all around.
+\addtolength{\oddsidemargin}{-.5in}%
+\addtolength{\evensidemargin}{-.5in}%
+\addtolength{\textwidth}{1in}%
+\addtolength{\textheight}{1.3in}%
+\addtolength{\topmargin}{-.8in}%
+
+
+\begin{document}
+
+%\bibliographystyle{natbib}
+
+\def\spacingset#1{\renewcommand{\baselinestretch}%
+{#1}\small\normalsize} \spacingset{1}
+
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+\if0\blind
+{
+  \title{\bf On Misuses of the Kolmogorov--Smirnov Test for One-Sample 
+	Goodness-of-Fit}
+  \author{Anthony Zeimbekakis\\
 %   \href{mailto:anthony.zeimbekakis@uconn.edu}
 % {\nolinkurl{anthony.zeimbekakis@uconn.edu}}\\
-  Elizabeth Schifano\\
+  Elizabeth D. Schifano\\
   Jun Yan\\[1ex]
   Department of Statistics, University of Connecticut\\
 }
-\date{}
+  \maketitle
+} \fi
 
-\begin{document}
-\maketitle
+\if1\blind
+{
+  \bigskip
+  \bigskip
+  \bigskip
+  \begin{center}
+    {\LARGE\bf On Misuses of the Kolmogorov--Smirnov Test for One-Sample 
+	Goodness-of-Fit}
+\end{center}
+  \medskip
+} \fi
 
-\doublespace
-
+\bigskip
 \begin{abstract}
 The Kolmogorov--Smirnov (KS) test is one of the most popular goodness-of-fit
 tests for comparing a sample with a hypothesized continuous distribution.
@@ -78,14 +76,15 @@ three scenarios through simulation studies:
 2) the data are serially dependent; and
 3) a combination of the first two scenarios.
 For each scenario, we provide remedies for practical applications.
-
-\bigskip
-\noindent{\sc Keywords}:
-nonparametric bootstrap;
-parametric bootstrap;
-working dependence.
 \end{abstract}
 
+\noindent%
+{\it Keywords:}  nonparametric bootstrap; parametric bootstrap;
+working dependence.
+\vfill
+
+\newpage
+\spacingset{1.45} % DON'T change the spacing!
 \section{Introduction}
 \label{sec:intro}
 
@@ -225,36 +224,36 @@ the \texttt{ks.test()} function in~R with the fitted normal distribution as the
 hypothesized distribution. That is, the hypothesized distribution was
 $N(\bar X, s^2)$ where $\bar X$ is the sample mean and $s^2$ is the sample
 variance (with $n$ in the denominator). This experiment was repeated 1000 times
-and the probability-probability plot (PP-plot) of the 1000 p-values are 
+and the probability-probability plot (PP-plot) of the 1000 p-values is 
 displayed in the top left plot of Figure~\ref{fig:pp_f}. If the test were
 valid, the p-values would be uniformly distributed in the unit
 interval and the points in the PP-plot would fall along the diagonal line. 
-Clearly, the distribution of the 1000 p-values are very different from what
+Clearly, the distribution of the 1000 p-values is very different from what
 one would expect to see from 1000 draws from the standard uniform
 distribution.  
 
 
-\begin{figure}[tbp]
+\begin{figure}
   \centering
   \includegraphics[width=.5\textwidth]{pp_f.pdf}
   \caption{PP-plots for the p-values obtained from KS tests with unspecified
     parameters with sample size $n = 200$ based on 1000 replicates. The data
     generating models were $N(8, 8)$ and $\Gamma(8, 1)$.
-  }
-  \label{fig:pp_f}
+ }
+ \label{fig:pp_f}
 \end{figure}
 
 
 We similarly considered random samples $X_1, \ldots, X_n$ 
 generated from a gamma distribution with shape and scale parameters 8 and 1, 
 respectively ($\Gamma(8,1)$), and sample size $n=200$. These parameter values 
-were selected so that mean and variance of the normal and gamma distributions 
-in the simulations are the same. Likewise, the p-value of the test 
+were selected so that the mean and variance of the normal and gamma distributions 
+were the same in the simulations. Likewise, the p-value of the test 
 statistic~$D_n$ in~\eqref{eq:ks_fitted} was obtained by naively calling the
 \texttt{ks.test()} function in~R with the fitted gamma distribution as the
 hypothesized distribution using the shape and scale maximum likelihood 
 estimates. The PP-plot of the p-values from 1000 replications of this 
-experiment are displayed in the bottom left plot of Figure~\ref{fig:pp_f}. The
+experiment is displayed in the bottom left plot of Figure~\ref{fig:pp_f}. The
 p-values are again non-uniformly distributed due to the use of the 
 estimated parameters when specifying the null distribution.
 
@@ -313,7 +312,7 @@ H_0: \text{$X_i$'s have marginal distribution $F$.}
 \]
 The KS statistic $D_n$ in Equation~\eqref{eq:ks_standard}
 is still a good measure of deviation from the null hypothesis. Nonetheless, the
-null distribution of $F_n$ changes when there is serial dependence.
+null distribution changes when there is serial dependence.
 When the serial dependence is
 positive, the effective sample size is less than~$n$. The test statistic
 would be stochastically greater than that obtained from independent data, 
@@ -537,15 +536,15 @@ the last section, here we use $F_{\hat\theta_n^*}$ in place of the known~$F$.
   \label{fig:pp_ssf}
 \end{figure}
 
-Figure~\ref{fig:pp_ssf} shows the PP-plots resulting p-values of the
-procedure performed on data generated from same simulation settings as in
-Section~\ref{sec:dependence}. For comparison, we also displayed the PP-plot of
+Figure~\ref{fig:pp_ssf} shows the resulting PP-plots of p-values from the
+procedure performed on data generated from the same simulation settings as in
+Section~\ref{sec:dependence}. For comparison, we also display the PP-plots from
 a naive bootstrap procedure that adjusts for the unspecified parameters as in
 Section~\ref{sec:fitted} but not for the serial dependence. 
 The super naive approach that does not adjust for fitted parameters nor serial
 dependence would have double sin, so the results are not reported. 
 The p-values from
-naively fitting parameters but not adjusting for dependence clearly deviates
+naively fitting parameters but not adjusting for dependence clearly deviate
 from the standard uniform distribution except in the MA(1) case, where the
 autocorrelation is nonzero with a short memory of only lag~1.
 Similar to Section~\ref{sec:dependence}, the working normal copula approach
@@ -667,14 +666,4 @@ step~4 are different from the parametric bootstrap version.
 
 \bibliographystyle{asa}
 \bibliography{citations}
-
-
 \end{document}
-%%% LocalWords: nonparametric semiparametric autocorrelation ARMA
-%%% Local Variables:
-%%% mode: latex
-%%% TeX-master: t
-%%% ispell-personal-dictionary: ".aspell.en.pws"
-%%% fill-column: 80
-%%% eval: (auto-fill-mode 1)
-%%% End:
