addressed comments from TAS and added education twist

--- a/manuscript/citations.bib
+++ b/manuscript/citations.bib
@@ -130,7 +130,7 @@
 }
 
 @Book{hofert2018elements,
-  title =	 {{E}lements of {C}opula {M}odeling with \textsf{R}},
+  title =	 {Elements of Copula Modeling with \textsf{R}},
   year =	 2018,
   publisher =	 {Springer},
   address =	 {New York},
@@ -249,6 +249,29 @@
   pages =	 {115--116}
 }
 
+@article{psaradakis2017distance,
+  title =	 {A Distance Test of Normality for a Wide Class of Stationary
+                  Processes},
+  author =	 {Psaradakis, Zacharias and V{\'a}vra, Mari{\'a}n},
+  journal =	 {Econometrics and Statistics},
+  volume =	 2,
+  pages =	 {50--60},
+  year =	 2017,
+  publisher =	 {Elsevier}
+}
+
+@article{psaradakis2020normality,
+  title =	 {Normality Tests for Dependent Data: {L}arge-Sample and
+                  Bootstrap Approaches},
+  author =	 {Psaradakis, Zacharias and V{\'a}vra, Mari{\'a}n},
+  journal =	 {Communications in Statistics---Simulation and Computation},
+  volume =	 49,
+  number =	 2,
+  pages =	 {283--304},
+  year =	 2020,
+  publisher =	 {Taylor \& Francis}
+}
+
 @article{smirnov1948table,
   title =	 {Table for Estimating the Goodness of Fit of Empirical
                   Distributions},
@@ -271,6 +294,16 @@
   number =	 3,
   pages =	 {1151--1157},
   year =	 2007
+}
+
+@incollection{stephens2017tests,
+  title =	 {Tests Based on {EDF} Statistics},
+  author =	 {Stephens, Michael A},
+  booktitle =	 {Goodness-of-fit-techniques},
+  editor =	 {Ralph B. D'Agostino and Michael A. Stephens},
+  pages =	 {97--194},
+  year =	 2017,
+  publisher =	 {Routledge}
 }
 
 @article{tuncer2019online,
